<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#FFF1E5"
    tools:context=".fragment.forgotPassFragment">
    <TextView
        android:id="@+id/tvForgetPassHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="32dp"
        android:text="Quên mật khẩu"
        android:textAlignment="center"
        android:textColor="@color/text_color"
        android:textSize="32sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvForgetPassSubHeading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:padding="8dp"
        android:text="@string/forget_pass_fragment_sub_heading"
        android:textAlignment="center"
        android:textColor="@color/subheading_color"
        app:layout_constraintLeft_toLeftOf="@+id/tvForgetPassHeading"
        app:layout_constraintRight_toRightOf="@+id/tvForgetPassHeading"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassHeading" />

    <LinearLayout
        android:id="@+id/ForgetPassContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:orientation="vertical"
        android:padding="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvForgetPassSubHeading">

        <ImageView
            android:id="@+id/ivForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@null"
            android:padding="16dp"
            android:src="@drawable/ic_forget_password" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/etEmailContainer"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="16dp"
            android:hint="@string/field_email"
            app:boxStrokeColor="@color/box_stroke_color"
            app:errorEnabled="true"
            app:hintTextColor="@color/text_color"
            app:placeholderText="Brandonelouis@gmail.com"
            app:startIconDrawable="@drawable/ic_email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:inputType="textEmailAddress" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnResetPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:backgroundTint="#825513"
            android:padding="12dp"
            android:text="@string/field_reset_password"
            android:textColor="@color/button_text_color"
            android:textSize="16sp"
            app:cornerRadius="6dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnBackToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginVertical="4dp"
            android:backgroundTint="@color/button_tint_color"
            android:padding="12dp"
            android:text="@string/field_back_to_login"
            android:textColor="@color/button_tint_text_color"
            android:textSize="16sp"
            app:cornerRadius="6dp"
            app:strokeColor="@color/button_tint_border_color"
            app:strokeWidth="2dp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>